--- a/css/styles.css
+++ b/css/styles.css
@@ -5,5 +5,5 @@
 
 body {
     background-color: burlywood;
-    background-image: url("data:image/svg+xml,%3Csvg xmlns='http
+    /* background-image: url("data:image/svg+xml,%3Csvg xmlns='http */
 }
